Small alignment fix

--- a/css/academic.css
+++ b/css/academic.css
@@ -133,22 +133,23 @@ footer{
     width: 100%;
 }
 
-#moved-social-icons ul.social-icon{
-	display:inline-flex;
-	flex-direction:row;
-	flex-wrap:wrap;
-	list-style:none;
-	padding:0;
-	margin-top:30px
+#moved-social-icons ul.network-icon {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 30px auto 0;   /* auto horizontally centers the flex row */
 }
 
-#moved-social-icons .social-icon li{
-	margin-right:10px
+#moved-social-icons ul.network-icon li {
+    margin-right: 10px;
 }
 
-#moved-social-icons .social-icon li:last-of-type{
-	margin-right:0
+#moved-social-icons ul.network-icon li:last-of-type {
+    margin-right: 0;
 }
+
 
 #moved-social-icons .social-icon li:hover{
 	transform:scale(1.2)
